Hooking up deserialised output and fixing model data types

--- a/src/WebApp.UnitTests/HomeBoard.WebApp.UnitTests.csproj
+++ b/src/WebApp.UnitTests/HomeBoard.WebApp.UnitTests.csproj
@@ -18,5 +18,8 @@
   <ItemGroup>
     <ProjectReference Include="..\WebApp\HomeBoard.WebApp.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="TestData\**" CopyToOutputDirectory="PreserveNewest" LinkBase="TestData\" />
+  </ItemGroup>
 
 </Project>
