--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "WeatherService": {
+    "ActionUri": "data/2.5/weather",
+    "Latitude": 51.93,
+    "Longitude": -0.27,
+    "Units": "metric",
+    "ApiKey": "5c81a5c4dabe4f0cbe4b1afd830f1b3f",
+    "BaseUrl": "https://api.openweathermap.org"
+  }
 }
