Try get from cache and timeout from config

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -13,6 +13,7 @@
     "Longitude": -0.27,
     "Units": "metric",
     "ApiKey": "5c81a5c4dabe4f0cbe4b1afd830f1b3f",
-    "BaseUrl": "https://api.openweathermap.org"
+    "BaseUrl": "https://api.openweathermap.org",
+    "CacheTimeoutSeconds": 60
   }
 }
