Setting up config and refactoring the DI

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -15,5 +15,14 @@
     "ApiKey": "5c81a5c4dabe4f0cbe4b1afd830f1b3f",
     "BaseUrl": "https://api.openweathermap.org",
     "CacheTimeoutSeconds": 60
+  },
+  "TrainsService": {
+    "BaseUrl": "http://iris2.rail.co.uk/tiger",
+    "StationId": "30842A",
+    "CacheTimeoutSeconds": 60,
+    "Destinations": [
+      "KGX",
+      "SPL"
+    ]
   }
 }
