Sensitive config now comes from environment variable

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -12,7 +12,7 @@
     "Latitude": 51.93,
     "Longitude": -0.27,
     "Units": "metric",
-    "ApiKey": "5c81a5c4dabe4f0cbe4b1afd830f1b3f",
+    "ApiKey": "",
     "BaseUrl": "https://api.openweathermap.org",
     "CacheTimeoutSeconds": 60
   },
