--- a/src/WebApp/ClientApp/package.json
+++ b/src/WebApp/ClientApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aspnet/signalr": "^1.1.4",
+    "@microsoft/signalr": "^3.1.3",
     "babel-eslint": "^10.1.0",
     "bootstrap": "^4.1.3",
     "jquery": "^3.4.1",
