Updating server side formats and working on page formatting

--- a/src/WebApp/appsettings.json
+++ b/src/WebApp/appsettings.json
@@ -16,6 +16,10 @@
     "BaseUrl": "https://api.openweathermap.org",
     "CacheTimeoutSeconds": 60
   },
+  "Timezone": {
+    "Windows": "GMT Standard Time",
+    "Linux": "Europe/London"
+  },
   "TrainsService": {
     "BaseUrl": "http://iris2.rail.co.uk/tiger",
     "StationId": "30842A",
